fixed cropping, broke other things

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,20 +53,18 @@ body {
   text-shadow: 1px 1px 6px rgba(80, 80, 80, 0.5);
 }
 .main-content {
-  /*flex: 1;*/
+  flex: 1;
   width: 100%;
   height: 100%;
-  /*position: fixed;*/
-  display: -webkit-box;
+  /*display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: flex;*/
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
   text-align: center;
-
 }
 
 .hidden {
